# fastmcp

./: pyproject.toml
src/fastmcp/cli/: apps_dev.py
src/fastmcp/server/: dependencies.py
src/fastmcp/server/auth/providers/: google.py
src/fastmcp/server/middleware/: error_handling.py
src/fastmcp/server/providers/: filesystem_discovery.py
tests/client/transports/: test_transports.py
