[project]
name = "fastmcp"
description = "The fast, Pythonic way to build MCP servers and clients."
authors = [
    { name = "Jeremiah Lowin" },
]
dependencies = [
    "python-dotenv>=1.1.0",
    "exceptiongroup>=1.2.2",
    "httpx>=0.28.1,<1.0",
    "mcp>=1.24.0,<2.0",
    "openapi-pydantic>=0.5.1",
    "opentelemetry-api>=1.20.0",
    "packaging>=24.0",
    "platformdirs>=4.0.0",
    "rich>=13.9.4",
    "cyclopts>=4.0.0",
    "authlib>=1.6.5",
    "pydantic[email]>=2.11.7",
    "pyyaml>=6.0,<7.0",
    "pyperclip>=1.9.0",
    "py-key-value-aio[filetree,keyring,memory]>=0.4.4,<0.5.0",
    "uvicorn>=0.35",
    "websockets>=15.0.1",
    "jsonschema-path>=0.3.4",
    "jsonref>=1.1.0",
    "watchfiles>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "mcp",
    "mcp server",
    "mcp client",
    "model context protocol",
    "fastmcp",
    "llm",
    "agent",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
version = "3.0.2+lineaje.1"
maintainers = [
    { name = "Lineaje DepFixer", email = "221268890+Lineaje-DepFixer@users.noreply.github.com" },
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.40.0",
]
azure = [
    "azure-identity>=1.16.0",
]
openai = [
    "openai>=1.102.0",
]
tasks = [
    "pydocket>=0.17.2",
]

[project.scripts]
fastmcp = "fastmcp.cli:app"

[project.urls]
Homepage = "https://github.com/lineaje-labs-gos/fastmcp"
Repository = "https://github.com/lineaje-labs-gos/fastmcp"
Documentation = "https://gofastmcp.com"
Tracker = "https://github.com/lineaje-labs-gos/fastmcp/issues"

[dependency-groups]
dev = [
    "dirty-equals>=0.9.0",
    "fastmcp[anthropic,azure,openai,tasks]",
    "fastapi>=0.115.12",
    "opentelemetry-sdk>=1.20.0",
    "inline-snapshot[dirty-equals]>=0.27.2",
    "ipython>=8.12.3",
    "pdbpp>=0.11.7",
    "psutil>=7.0.0",
    "pyinstrument>=5.0.2",
    "pyperclip>=1.9.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.1.1",
    "pytest-env>=1.1.5",
    "pytest-flakefinder>=1.1.0",
    "pytest-httpx>=0.35.0",
    "pytest-report>=0.2.1",
    "pytest-retry>=1.7.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.12.8",
    "ty>=0.0.15",
    "prek>=0.2.12",
    "loq>=0.1.0a3",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
]

[build-system]
requires = [
    "hatchling",
    "uv-dynamic-versioning>=0.7.0",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Using in-memory token storage:UserWarning",
    "error:coroutine .* was never awaited:RuntimeWarning",
    "error:Exception ignored in.*coroutine:pytest.PytestUnraisableExceptionWarning",
]
timeout = 5
env = [
    "FASTMCP_TEST_MODE=1",
    "D:FASTMCP_LOG_LEVEL=DEBUG",
    "D:FASTMCP_ENABLE_RICH_TRACEBACKS=0",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "client_process: marks tests that spawn client processes via stdio transport. These can create issues when run in the same CI environment as other subprocess-based tests.",
]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "--inline-snapshot=disable",
]

[tool.ty.src]
include = [
    "src",
    "tests",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    ".git",
    "dist",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]

[tool.ty.terminal]
error-on-warning = true

[tool.ruff.lint]
fixable = [
    "ALL",
]
ignore = [
    "COM812",
    "PLR0913",
    "SIM102",
]
extend-select = [
    "B",
    "C4",
    "I",
    "PIE",
    "RUF",
    "SIM",
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = [
    "fastmcp",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "I001",
    "RUF013",
]
"src/fastmcp/__init__.py" = [
    "E402",
]
"!src/**.py" = [
    "B",
    "C4",
    "PIE",
    "RUF",
    "SIM",
]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportPrivateUsage = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false
reportConstantRedefinition = false

[tool.codespell]
ignore-words-list = "asend,shttp,te"
